--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
       max-width:300px;
       height:auto;
       display:block;
-      margin:0 auto 16px;
+      margin:0 auto 4px;
     }
 
     video.promo-video {
       max-width: 100%;
       border-radius: 12px;
+      margin-top: 0;
       margin-bottom: 20px;
     }
 
@@ -87,8 +88,7 @@
 
     <!-- video -->
     <video class="promo-video" controls autoplay muted playsinline>
-      <source src="https://storage.googleapis.com/msgsndr/SEMmeWOBlogS8eeis0N9/media/68436e0cae3bbdab95cae4b0.mp4
-" type="video/mp4">
+      <source src="https://storage.googleapis.com/msgsndr/SEMmeWOBlogS8eeis0N9/media/68436e0cae3bbdab95cae4b0.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
 
